--- a/gb/21/7/14/n13089305.md
+++ b/gb/21/7/14/n13089305.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cykolz3585/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cykolz3585/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cykolz3585/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cykolz3585/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cykolz3585/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cykolz3585/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cykolz3585/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【远见快评】日防卫白皮书破三纪录 一图惊天下</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13089313-eba132b4f56abe8cee15e160341904f8-600x400.jpg" />
-<h6>日本防卫白皮书，一图惊天下！（《远见快评》提供）
-</h6>
+<a href="https://d19vw3711v9lks.cloudfront.net/H9hMUZExi"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年07月15日讯】朋友们好，今天是7月14日（星期三），欢迎来到《<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》，我是唐靖远。</p>
+	<p>【大纪元2021年07月15日讯】朋友们好，今天是7月14日（星期三），欢迎来到《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》，我是唐靖远。</p>
 <p>在此前的节目中我曾经和大家讨论过，菅义伟首相作为第一个前往白宫拜访美国新政府的外国领导人，最重要的意义就在于，事关台海核心利益的美中台三方博弈，将会变成美中日台的四方游戏。</p>
 <p>就在昨天，日本政府正式发布了今年的防卫白皮书，立即引发国际舆论关注，因为今年的白皮书出现了3个“首次”：首次将台湾事项单列；首次正式写明了台湾局势的稳定对日本的重要性，这是中日建交以来的首开纪录；而且，白皮书还通过另一个首开纪录的方式，释放了非常微妙而又可以说是非常重大的政治信息。</p>
-<p>今天我们就先简要和朋友们讨论一下这份白皮书的重要性，因为这份文件证明了，小粉红们口口声声最痛恨的、给外国势力递刀子的最大“恨国党”，恰恰就是<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>本人。</p>
+<p>今天我们就先简要和朋友们讨论一下这份白皮书的重要性，因为这份文件证明了，小粉红们口口声声最痛恨的、给外国势力递刀子的最大“恨国党”，恰恰就是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>本人。</p>
+<p><center><a src=""></a><a href="https://d19vw3711v9lks.cloudfront.net/H9hMUZExi"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/228307e1-7ba6-499a-9c4a-55f255149ca9?r=16x9&amp;d=1372" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
 <h2>【日防卫白皮书 首开3纪录】</h2>
 <p>这本最新年度的防卫白皮书首次将台湾安全议题作为一个单项列出，称拜登政府不但延续了川普（特朗普）政府的政策，而且在军事上力挺台湾的立场将更为明显；与此同时，将台湾视为核心利益的中共也几乎不可能对美国做任何妥协。</p>
 <p>所以，美中之间在台湾问题上的对立可能趋于明显，这迫使日本必须要以比过去更加强烈的危机感密切注视台海的安全局势，因为对于日本安全和国际社会稳定而言，台湾局势的稳定非常重要。</p>
@@ -17,8 +17,8 @@
 <p>大家看到了吧，这种像“更加强烈的危机感密切注视台海”、“必须进一步加强威慑力和应对能力”等措辞频频出现，其实就体现一个意思：日本必须提升军力。</p>
 <p>值得我们注意的一点是，这不是哪个议员或官员在某个非正式场合发表的言论，这是日本内阁会议昨天（13日）正式通过的2021国家防卫白皮书，是官方的正式结论。</p>
 <p>所以，如果说菅义伟访日后发表的美日联合声明代表了日本在政治上入局台海，那么这份白皮书就等于日本在军事上正式宣告入局台海。</p>
-<p>这个局面是<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的战狼扩张政策一手造成的，也就是说，是习近平本人把刀子递到了日本的手上。</p>
-<p>再有，<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%98%B2%E5%8D%AB%E7%99%BD%E7%9A%AE%E4%B9%A6.md#1">日本防卫白皮书</a>首次将台湾单列并表述其重要性，不再归类在中国的章节中，相当于把二者脱钩，这本身可以说就是再次踩中共红线的行为，因为这等于直接触及到了中共最敏感的“一个中国”问题。</p>
+<p>这个局面是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的战狼扩张政策一手造成的，也就是说，是习近平本人把刀子递到了日本的手上。</p>
+<p>再有，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%98%B2%E5%8D%AB%E7%99%BD%E7%9A%AE%E4%B9%A6.md#1">日本防卫白皮书</a>首次将台湾单列并表述其重要性，不再归类在中国的章节中，相当于把二者脱钩，这本身可以说就是再次踩中共红线的行为，因为这等于直接触及到了中共最敏感的“一个中国”问题。</p>
 <h2>【他是谁？白皮书封面掀波】</h2>
 <p>而更加引人注目的是，本次的白皮书封面一改过去50年来使用地球、兵器或自卫队员照片的惯例，首次使用了日本水墨画艺术家西元祐贵的作品。这幅作品是一个披甲策马、威风凛凛的古代武士形象。</p>
 <p>敏感问题的焦点，就在这个武士形象上面。</p>
@@ -32,20 +32,20 @@
 <p>我们都知道，中共操弄反日情绪煽动民族情绪早就轻车熟路。所以就在今天，党媒《环球时报》立马就采访了日本防卫省白皮书制定事务室，要求对这个封面武士形象进行解释。</p>
 <p>结果该事务室发言人给予了一个不软不硬的回应，说“我们想表达的意思是‘守卫和守护’，没有‘进攻’的含义。”发言人还进一步解释说，战马武士手上并未持有任何武器，只是一个武士手握缰绳的形象，希望外界不要误读。</p>
 <p>我过去曾经和朋友们讨论过，从地缘政治的角度看，日本其实对中共是非常警惕的国家，因为整个日本列岛的生命线就在台湾外海。而从历史的角度看，日本可以说是最了解中国，也是最了解中共的国家。这不仅是因为日本深受中国传统文化的薰染，拥有东方文化思维，更是因为日本对中共的发家史一清二楚。</p>
-<p>所以，我们对比一下就会看到，<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%98%B2%E5%8D%AB%E7%99%BD%E7%9A%AE%E4%B9%A6.md#1">日本防卫白皮书</a>去年是粉红系的富士山樱花，简直就是温柔到家，今年一下变成披甲跃马的武士，这策略显得非常老练，充分使用了只可意会不可言传的手法，既对中共进行了分量足够的警告，又让中共一堆二杆子战狼恨得牙痒痒但又抓不到半点把柄，找不到下嘴处——仅凭这一点，我们就可以看出，未来中日在台海问题上的博弈，恐怕会远比中美博弈更让中共头疼。</p>
+<p>所以，我们对比一下就会看到，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%98%B2%E5%8D%AB%E7%99%BD%E7%9A%AE%E4%B9%A6.md#1">日本防卫白皮书</a>去年是粉红系的富士山樱花，简直就是温柔到家，今年一下变成披甲跃马的武士，这策略显得非常老练，充分使用了只可意会不可言传的手法，既对中共进行了分量足够的警告，又让中共一堆二杆子战狼恨得牙痒痒但又抓不到半点把柄，找不到下嘴处——仅凭这一点，我们就可以看出，未来中日在台海问题上的博弈，恐怕会远比中美博弈更让中共头疼。</p>
 <h2>【习近平狠话：党内民主是奇谈怪论】</h2>
 <p>好的，接下来我们把视线转向中国大陆，来讨论一下有关习近平的两个消息。这两个消息看起来都是中共党内那些令人厌烦的党文化陈词滥调，但有助于我们观察习近平对自己党内地位会如何去追求。</p>
 <p>首先一个是中共官方近日出版了一本名叫“习近平关于全面从严治党论述摘编（2021年版）”的新书，其内容摘录了习近平2012年到2021年4月期间的一些报告、讲话、指示等，部分内容是首次公开发表。</p>
 <p>在这些内容中引起外界注意的是，习近平于2018年1月在十九届中纪委二次全会上的讲话说：“随着全面从严治党不断深入，党内也出现了一些杂音噪音。有的说什么‘过去五年强调党的集中统一够充分了，今后要把重心放在发展党内民主上。’出现这些奇谈怪论，有的是政治上糊涂，头脑不清醒；有的则是别有用心，自身不干净，企图蒙混过关。”</p>
 <p>我们从习近平19大以后的一系列极左路线来看，他说出这些话一点都不奇怪，因为就在他这番“奇谈怪论”的讲话后仅仅两个月，全国人大就修改宪法，废除了国家主席的任期制。</p>
 <p>也就是说，这番讲话与习近平当时废除国家主席任期制是密切关联的，而且折射出党内有很多人都想用“发展党内民主”来阻止习近平。</p>
-<h2>【压倒“邓理论”？<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E4%B9%A0%E6%80%9D%E6%83%B3.md#1">习思想</a>灌输全面铺开】</h2>
+<h2>【压倒“邓理论”？<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E6%80%9D%E6%83%B3.md#1">习思想</a>灌输全面铺开】</h2>
 <p>第二个消息，是中共中央、国务院在7月12日印发了《关于新时代加强和改进思想政治工作的意见》。</p>
 <p>这份《意见》共有6个部分，通篇都是如何加强中共思想政治工作的党文化叙述，我这里就不再重复那些绕口令一般的无聊文字了。我只和朋友们讨论两个要点，这也是我看到这份《意见》最主要的两个核心论述，一个是说，自从18大习近平上台执政以后，中共的意识形态领域形势发生了全局性、根本性的转变。</p>
 <p>另一个就是以党文化语言的典型套路，反复论述了如何把思想政治工作贯穿党的建设和国家治理各领域各方面各环节，并牢牢掌握工作的领导权和主动权。而这里提到的思政工作，并非大众普遍听说过的什么马克思主义原理，而是必须且只能“以习近平新时代中国特色社会主义思想为指导”。</p>
 <p>在这份《意见》中，中共要求必须用习近平思想武装全党——大家听听，有没有一种熟悉的感觉？N多年以前的说法是用毛泽东思想武装全党——同时必须用习近平思想来指导一切工作。</p>
 <p>如果要用大白话来说，就是从现在开始，无论你是研究发射火箭上天，还是主管村里的农户如何杀猪，都必须以习近平思想为指导。这个思想上管天，下管地，中间还要管空气，甚至对如何治疗精神病人都有特效。</p>
-<p>而且，按照文件的要求，加强基层的思政工作必须全方位无死角，包括企业、农村、机关、学校、社区，以及网络等，960万平方公里土地上不允许有任何一块“<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E4%B9%A0%E6%80%9D%E6%83%B3.md#1">习思想</a>”无法触及的法外之地。</p>
+<p>而且，按照文件的要求，加强基层的思政工作必须全方位无死角，包括企业、农村、机关、学校、社区，以及网络等，960万平方公里土地上不允许有任何一块“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E6%80%9D%E6%83%B3.md#1">习思想</a>”无法触及的法外之地。</p>
 <p>我们都知道，中共今年秋天要举行六中全会，明年20大的人事变动，实际上在这个六中全会基本上就要定盘。所以如果我们把这两个中共官方连续释放的消息连在一起看，就可以看到都指向了同一个结论，就是：习近平在开始为自己的连任或终身执政发动党内攻势。</p>
 <p>这种攻势是从“破”和“立”两个方面同时进行的。“破”的一面，就是习近平针对“党内民主”的驳斥与反击，他亲自将要求党内民主的言论定性为“奇谈怪论”，并准备了两顶大帽子进行反击，一顶是“政治糊涂头脑不清”，另一顶是“别有用心自身不干净”。</p>
 <p>这里就可以很清楚看到习近平的警告：凡是想要阻挡他的人就是两种待遇，轻者属于政治糊涂，可能就难堪大用，仕途玩完；重者就是别有用心，等着调查上门查你所有的“不干净”。</p>
@@ -65,48 +65,48 @@
 <p>我们看到习近平把自己这套“习思想”的全称叫做“习近平新时代中国特色社会主义思想”，为什么他要突出“新时代”？当然就是告诉大家，邓小平那套特色理论是旧时代产物了，过时了，结束了。</p>
 <p>当然，到目前为止，虽然习近平占据上风和优势，但这个教权之争事实上仍未分出胜负。在接下来的这半年，可能才会进入真正白热化的争夺。朋友们不妨备好小板凳，一边吃瓜一边看戏。</p>
 <p>好的，今天就聊到这里，谢谢各位的观看，我们下次再见。</p>
-<p>《<ahref="https://github.com/cykolz3585/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/5/n13069784.md#1">【远见快评】滴滴遭三连击 官媒为何抛攻台方案</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/7/n13074809.md#1">【远见快评】习近平发亡党之音？日相一语惊人</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/9/n13079403.md#1">【远见快评】中共为何火力全开 滴滴满门抄斩</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/12/n13084696.md#1">【远见快评】孟晚舟搞砸翻盘无望 古巴突爆示威</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/5/n13069784.md#1">【远见快评】滴滴遭三连击 官媒为何抛攻台方案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/7/n13074809.md#1">【远见快评】习近平发亡党之音？日相一语惊人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/9/n13079403.md#1">【远见快评】中共为何火力全开 滴滴满门抄斩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/12/n13084696.md#1">【远见快评】孟晚舟搞砸翻盘无望 古巴突爆示威</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10711194.md#1" target="_blank">“富田兵变”遭镇压 尸体填满整个山沟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086007.md#1" target="_blank">郑兢业：人吃与吃人（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/10/n13080166.md#1">海地总统遭暗杀 英国灵媒预言成真</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/7/n13073679.md#1">【命理】雷神震怒 警惕不孝不义之人</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/8/n13077302.md#1">【小宇宙传说】世界各地的圣像为何落泪？</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/9/n13079287.md#1">【古韵流芳】高风亮节虞世南 大唐第一咏蝉诗</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/11/n13082243.md#1">【珍言真语】李有甫：折磨蝎子 军官得心绞痛怪病</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/13/n13087114.md#1">【横河观点】古巴人要自由 社会主义有何通病</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/14/n13087339.md#1">【新闻大家谈】陈光诚：抗共须跳出2怪圈</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/14/n13089051.md#1">【直播】布林肯受邀在国际宗教自由峰会讲话</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/12/n13084288.md#1">西沙巡航 美军强硬回击中共 发三张现场照</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/12/n13084709.md#1">【时事纵横】疫苗打出怪现象 陆公务员也成韭菜</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/12/n13084430.md#1">高通胀时如何投资 巴菲特等人这么说</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/12/n13084863.md#1">曾罹患大肠癌康复 54岁林利晒发呆自拍照</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/13/n13086946.md#1">让妻女坐经济舱 郭富城被网民说太抠门</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/11/n13082471.md#1">已接种2剂疫苗 庞德女郎蕾雅·瑟杜仍确诊</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/12/n13084541.md#1">刘德华主演《失孤》角色原型24年后找到儿子</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/11/n13082296.md#1">被邓超吐槽调高冷气温度 孙俪坚持的理由很养生</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/8/n13075763.md#1">1个天天做的姿势最伤腰！专家传授诀窍防腰痛</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/11/n13082554.md#1">不用挥汗如雨 快速上桌6道夏季美味晚餐</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/6/n13071781.md#1">15种食物炒过更营养！烹饪放油竟有这种好处</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/12/n13083531.md#1">遭狮群包围也不怕 小螃蟹高举双钳成功脱身</a></li>
-<li><a href="https://github.com/cykolz3585/djy/blob/master/gb/21/7/13/n13085700.md#1">美犹他州下“鱼” 数千条从飞机上倾泻而下</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cykolz3585/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cykolz3585/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/14/n13089305.htm">【远见快评】日防卫白皮书破三纪录 一图惊天下</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/14/n13089305.htm">【远见快评】日防卫白皮书破三纪录 一图惊天下</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cykolz3585/djy/blob/master/gb/21/7/14/n13089305.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cykolz3585/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cykolz3585/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cykolz3585/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cykolz3585/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cykolz3585/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/14/n13089305.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
